--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -208,7 +208,7 @@
   margin-right: 5vw;
   margin-top: 35px;
   max-width: 400px;
-  padding: 30px 25px 20px;
+  padding: 30px 58px 20px;
 
   h2,
   a {
@@ -228,8 +228,6 @@
 
   h2 {
     font-size: 1.875em;
-    margin-left: 1.5625rem;
-    margin-right: 1.5625rem;
     max-width: var($homepage, smaller-max-width);
   }
 }
@@ -239,8 +237,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0;
-  margin-left: 1.5625rem;
-  margin-right: 1.5625rem;
   margin-top: 1.875rem;
   max-width: var($homepage, smaller-max-width);
   padding-inline-start: 0;
@@ -322,7 +318,7 @@
 .smaller-width-div {
   margin-left: auto;
   margin-right: auto;
-  max-width: var($homepage, smaller-max-width);
+  max-width: var($homepage, larger-max-width);
 }
 
 .homepage-card-group {
@@ -331,7 +327,7 @@
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 275px));
   justify-content: center;
   grid-gap: 8px;
   row-gap: 8px;
@@ -445,7 +441,7 @@
   }
 
   .homepage-card-group {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 224px));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 275px));
   }
 }
 
@@ -478,7 +474,7 @@
   }
 
   .homepage-card-group {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 224px));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 275px));
   }
 }
 
@@ -506,7 +502,7 @@
     margin-left: 0;
     margin-right: auto;
     max-width: var($homepage, smaller-max-width);
-    padding: 0 0 0 75px;
+    padding: 0 0 0 58px;
   }
 
   .how-button-list {
