--- a/web/themes/custom/usagov/sass/_usagov-variables.scss
+++ b/web/themes/custom/usagov/sass/_usagov-variables.scss
@@ -58,7 +58,7 @@ $hero: (
 );
 $homepage: (
   larger-max-width: 1124px,
-  smaller-max-width: 1044px,
+  smaller-max-width: 1008px,
   small-font-size: 1.038em,
   medium-font-size: 2.2em,
 );
